Fix "Get Started" button on small screens.

--- a/website/src/css/imports/header.css
+++ b/website/src/css/imports/header.css
@@ -183,7 +183,7 @@ header {
     border-radius: 4px;
     background-color: rgba(255,255,255,0.1);
     color: white;
-    margin: 0 $micro 0 $tiny;
+    margin: 0 0 0 $tiny;
     padding-bottom: 9px;
     text-align: left;
     text-decoration: none;
@@ -223,6 +223,9 @@ header {
       margin: -4px 0 -6px 0;
       width: initial;
     }
+  }
+  .cta-header {
+    margin-left: $micro;
   }
   .cta-header a {
     display: inline-block;
